<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_blue">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:backgroundTint="@color/purple_200"
            android:text="@string/introAuto"
            android:id="@+id/gpsMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lugarAvistamento"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/lugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintSitio" />

        <EditText
            android:id="@+id/concello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintCocello" />

        <TextView
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GPS"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_weight="1"
                android:id="@+id/lonxitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/latitude" />

            <EditText
                android:layout_weight="1"

                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lonxitude" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataAvistamento"
            android:textColor="@color/black" />

        <DatePicker
            android:id="@+id/dataAvistamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <Button
            android:text="@string/seguinte"
            android:id="@+id/continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:visibility="gone"
            android:text="@string/velloAvistamento"
            android:id="@+id/velloAvistamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>