<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imaxeFB"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textAlignment="center" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/sexoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoP"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sexoI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoP"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="6dp">

            <TextView

                android:id="@+id/plumaxeP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tipoPlum"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plumaxeI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipoPlum"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <TextView
                android:id="@+id/tamanhoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanhoP"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tamanhoI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanhoP"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
